--- a/AulasJSES6/exerc_mod_2/package.json
+++ b/AulasJSES6/exerc_mod_2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "exerc_mod_2",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -7,8 +7,6 @@
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-transform-async-to-generator": "^7.5.0",
-    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.3",
     "babel-loader": "8.0.0-beta.0",
     "webpack": "^4.41.2",
@@ -18,8 +16,5 @@
   "scripts": {
     "dev": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production"
-  },
-  "dependencies": {
-    "axios": "^0.19.0"
   }
 }
